--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
 
-<!--   <div id="cover-page">
+  <div id="cover-page">
   	<img src="img/INHOUSE.jpg">
-  </div> -->
+  </div>
 
   <body>
 
