--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
   <body>
 
   	<header>
-  		<div> <h1 class="light logo">INHOUSE</h1> </div>
+  		<div>
+  			<h1>
+  		 <!-- <h1 class="light logo">INHOUSE</h1>  -->
+  		</div>
   		<hr>
 	</header>
   	
