added membership page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   			<h1>
   		 <!-- <h1 class="light logo">INHOUSE</h1>  -->
   		</div>
-  		<hr>
+  		<!-- <hr> -->
 	</header>
   	
   	<div class="center-me">
@@ -39,7 +39,7 @@
 			  	<hr>
 			  	<p class="center-me">If you care about dining, we’ll see you INHOUSE.</p>
   	
-	  			<div id="membership-button-div"><button class="red-line">MEMBERSHIP</button></div>
+	  			<div id="membership-button-div"><a href="/membership.html" class="red-line">MEMBERSHIP</a></div>
 	  		</div>
 	  	</div>
 	</div>
