--- a/membership.html
+++ b/membership.html
@@ -1,19 +1,187 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<title>INHOUSE - Membership</title>
+  	<title>INHOUSE</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="stylesheet.css">
   </head>
 
-  <body>
+  <body class="grey">
 
-<!--   	<header>
-  		<div> <h1 class="light logo">INHOUSE</h1> </div>
-  		<hr>
-	</header> -->
+  	<header>
+  		<div>
+  			<h1>
+  		 <!-- <h1 class="light logo">INHOUSE</h1>  -->
+  		</div>
+  		<!-- <hr> -->
+	</header>
+  	
+  	<div class="center-me">
+	  	<div id="member-page-intro">
+	  		<h1 class="text-left light title">INHOUSE is a full feature membership club providing unparalleled insight & opportunity to exploring exceptional hospitality experiences.</h1>
+	  	</div>
 
-	<div class="footer-div">
+	  	<img id="member-page-image" src="img/cups.png">
+	</div>
+
+	<div id="benefits-div" class="container">
+		<hr>
+		<div class="row">
+			<p class="row-item"><strong class="red">RESTAURANTS</strong><br>
+				We bring together dining enthusiasts<br>
+				Us quia dolorat. Untiberibea pa dolecatur?</p>
+			<p class='row-item'><strong>BENEFIT 1</strong><br>
+				We bring together dining enthusiasts<br>
+				Us quia dolorat. Untiberibea pa dolecatur?</p>
+			<p class='row-item'><strong>BENEFIT 2</strong><br>
+				We bring together dining enthusiasts<br>
+				Us quia dolorat. Untiberibea pa dolecatur?</p>
+			<p class='row-item'><strong>BENEFIT 3</strong><br>
+				We bring together dining enthusiasts<br>
+				Us quia dolorat. Untiberibea pa dolecatur?</p>
+			<p class='row-item'><strong>BENEFIT 4</strong><br>
+				We bring together dining enthusiasts
+				Us quia dolorat. Untiberibea pa dolecatur?</p>
+		</div>
+	</div>
+
+	<div id="partners-div">
+		<div id="partners-header"><strong>RESTAURANT PARTNERS 2016/2017</strong></div>
+
+		<hr>
+			<div class="row">
+				<ul class="partner-item">
+					<li><strong>A</strong></li>
+					<li>ABC Cocina</li>
+					<li>ABC Kitchen</li>
+					<li>abcV</li>
+					<li>Agern</li>
+					<li>L’Artusi</li>
+					<li>Aquavit</li>
+				</ul>
+				<ul class="partner-item">
+					<li><strong>B</strong></li>
+					<li>Bar Primi</li>
+					<li>Batard</li>
+					<li>Blue Hill</li>
+					<li>Blue Hill at Stone Barns</li>
+				</ul>
+				<ul class="partner-item">
+					<li><strong>C</strong></li>
+					<li>Casa Mono</li>
+					<li>Charlie Bird</li>
+					<li>Contra</li>
+					<li>Cosme</li>
+				</ul>
+				<ul class="partner-item">
+					<li><strong>D</strong></li>
+					<li>Decoy</li>
+					<li>Dell’Anima</li>
+					<li>The Dutch</li>
+				</ul>
+				<ul class="partner-item">
+					<li><strong>F</strong></li>
+					<li>Fedora</li>
+					<li>Frankies 570</li>
+				</ul>
+				<ul class="partner-item">
+					<li><strong>G</strong></li>
+					<li>Gramercy Tavern</li>
+				</ul>				
+			</div>
+		<hr>
+			<div class="row">
+				<ul class="partner-item">
+					<li><strong>A</strong></li>
+					<li>ABC Cocina</li>
+					<li>ABC Kitchen</li>
+					<li>abcV</li>
+					<li>Agern</li>
+					<li>L’Artusi</li>
+					<li>Aquavit</li>
+				</ul>
+				<ul class="partner-item">
+					<li><strong>A</strong></li>
+					<li>ABC Cocina</li>
+					<li>ABC Kitchen</li>
+					<li>abcV</li>
+					<li>Agern</li>
+					<li>L’Artusi</li>
+					<li>Aquavit</li>
+				</ul>
+				<ul class="partner-item">
+					<li><strong>A</strong></li>
+					<li>ABC Cocina</li>
+					<li>ABC Kitchen</li>
+					<li>abcV</li>
+					<li>Agern</li>
+					<li>L’Artusi</li>
+					<li>Aquavit</li>
+				</ul>
+				<ul class="partner-item">
+					<li><strong>A</strong></li>
+					<li>ABC Cocina</li>
+					<li>ABC Kitchen</li>
+					<li>abcV</li>
+					<li>Agern</li>
+					<li>L’Artusi</li>
+					<li>Aquavit</li>
+				</ul>
+				<ul class="partner-item">
+					<li><strong>A</strong></li>
+					<li>ABC Cocina</li>
+					<li>ABC Kitchen</li>
+					<li>abcV</li>
+					<li>Agern</li>
+					<li>L’Artusi</li>
+					<li>Aquavit</li>
+				</ul>
+				<ul class="partner-item">
+					<li><strong>A</strong></li>
+					<li>ABC Cocina</li>
+					<li>ABC Kitchen</li>
+					<li>abcV</li>
+					<li>Agern</li>
+					<li>L’Artusi</li>
+					<li>Aquavit</li>
+				</ul>				
+			</div>
+		<hr>
+			<div class="row-left">
+				<ul class="partner-item">
+					<li><strong>A</strong></li>
+					<li>ABC Cocina</li>
+					<li>ABC Kitchen</li>
+					<li>abcV</li>
+					<li>Agern</li>
+					<li>L’Artusi</li>
+					<li>Aquavit</li>
+				</ul>
+				<ul class="partner-item">
+					<li><strong>A</strong></li>
+					<li>ABC Cocina</li>
+					<li>ABC Kitchen</li>
+					<li>abcV</li>
+					<li>Agern</li>
+					<li>L’Artusi</li>
+					<li>Aquavit</li>
+				</ul>
+				<ul class="partner-item">
+					<li><strong>A</strong></li>
+					<li>ABC Cocina</li>
+					<li>ABC Kitchen</li>
+					<li>abcV</li>
+					<li>Agern</li>
+					<li>L’Artusi</li>
+					<li>Aquavit</li>
+				</ul>			
+			</div>
+	</div>
+
+	<div id="apply-button-div"><a href="./membership.html" class="red-line">APPLY</a></div>
+	  	 
+
+  	<div class="footer-div">
 		<hr>
 		<ul class="footer">
 			<li>ABOUT US</li>
