added membership page

--- a/membership.html
+++ b/membership.html
@@ -178,7 +178,7 @@
 			</div>
 	</div>
 
-	<div id="apply-button-div"><a href="./membership.html" class="red-line">APPLY</a></div>
+	<div id="apply-button-div"><a href="./INHOUSE/membership.html" class="red-line">APPLY</a></div>
 	  	 
 
   	<div class="footer-div">
