added first form

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			  	<hr>
 			  	<p class="center-me">If you care about dining, we’ll see you INHOUSE.</p>
   	
-	  			<div id="membership-button-div"><a href="/INHOUSE/membership.html" class="red-line">MEMBERSHIP</a></div>
+	  			<div id="membership-button-div"><a href="./membership.html" class="red-line">MEMBERSHIP</a></div>
 	  		</div>
 	  	</div>
 	</div>
