--- a/membership.html
+++ b/membership.html
@@ -40,7 +40,7 @@
 				We bring together dining enthusiasts<br>
 				Us quia dolorat. Untiberibea pa dolecatur?</p>
 			<p class='row-item'><strong>BENEFIT 4</strong><br>
-				We bring together dining enthusiasts
+				We bring together dining enthusiasts<br>
 				Us quia dolorat. Untiberibea pa dolecatur?</p>
 		</div>
 	</div>
@@ -92,93 +92,59 @@
 		<hr>
 			<div class="row">
 				<ul class="partner-item">
-					<li><strong>A</strong></li>
-					<li>ABC Cocina</li>
-					<li>ABC Kitchen</li>
-					<li>abcV</li>
-					<li>Agern</li>
-					<li>L’Artusi</li>
-					<li>Aquavit</li>
+					<li><strong>H</strong></li>
+					<li>High Street on Hudson</li>
 				</ul>
 				<ul class="partner-item">
-					<li><strong>A</strong></li>
-					<li>ABC Cocina</li>
-					<li>ABC Kitchen</li>
-					<li>abcV</li>
-					<li>Agern</li>
-					<li>L’Artusi</li>
-					<li>Aquavit</li>
+					<li><strong>J</strong></li>
+					<li>Jean Georges</li>
 				</ul>
 				<ul class="partner-item">
-					<li><strong>A</strong></li>
-					<li>ABC Cocina</li>
-					<li>ABC Kitchen</li>
-					<li>abcV</li>
-					<li>Agern</li>
-					<li>L’Artusi</li>
-					<li>Aquavit</li>
+					<li><strong>L</strong></li>
+					<li>Lafayette</li>
+					<li>Lilia</li>
+					<li>Loring Place</li>
 				</ul>
 				<ul class="partner-item">
-					<li><strong>A</strong></li>
-					<li>ABC Cocina</li>
-					<li>ABC Kitchen</li>
-					<li>abcV</li>
-					<li>Agern</li>
-					<li>L’Artusi</li>
-					<li>Aquavit</li>
+					<li><strong>M</strong></li>
+					<li>Maison Premiere</li>
+					<li>The Modern</li>
+					<li>The Modern Bar</li>
+					<li>The Musket Room</li>
 				</ul>
 				<ul class="partner-item">
-					<li><strong>A</strong></li>
-					<li>ABC Cocina</li>
-					<li>ABC Kitchen</li>
-					<li>abcV</li>
-					<li>Agern</li>
-					<li>L’Artusi</li>
-					<li>Aquavit</li>
+					<li><strong>N</strong></li>
+					<li>Narcissa</li>
+					<li>The NoMad</li>
+					<li>The NoMad Bar</li>
 				</ul>
 				<ul class="partner-item">
-					<li><strong>A</strong></li>
-					<li>ABC Cocina</li>
-					<li>ABC Kitchen</li>
-					<li>abcV</li>
-					<li>Agern</li>
-					<li>L’Artusi</li>
-					<li>Aquavit</li>
+					<li><strong>O</strong></li>
+					<li>O Ya</li>
 				</ul>				
 			</div>
 		<hr>
 			<div class="row-left">
 				<ul class="partner-item">
-					<li><strong>A</strong></li>
-					<li>ABC Cocina</li>
-					<li>ABC Kitchen</li>
-					<li>abcV</li>
-					<li>Agern</li>
-					<li>L’Artusi</li>
-					<li>Aquavit</li>
+					<li><strong>P</strong></li>
+					<li>Pasquale Jones</li>
+					<li>Perla Café</li>
+					<li>Prime Meats</li>
 				</ul>
 				<ul class="partner-item">
-					<li><strong>A</strong></li>
-					<li>ABC Cocina</li>
-					<li>ABC Kitchen</li>
-					<li>abcV</li>
-					<li>Agern</li>
-					<li>L’Artusi</li>
-					<li>Aquavit</li>
+					<li><strong>R</strong></li>
+					<li>Rebelle</li>
+					<li>Red Farm</li>
 				</ul>
 				<ul class="partner-item">
-					<li><strong>A</strong></li>
-					<li>ABC Cocina</li>
-					<li>ABC Kitchen</li>
-					<li>abcV</li>
-					<li>Agern</li>
-					<li>L’Artusi</li>
-					<li>Aquavit</li>
+					<li><strong>U</strong></li>
+					<li>Union Square Café</li>
+					<li>Upland</li>
 				</ul>			
 			</div>
 	</div>
 
-	<div id="apply-button-div"><a href="./INHOUSE/membership.html" class="red-line">APPLY</a></div>
+	<div id="apply-button-div"><a href="./application.html" class="red-line">APPLY</a></div>
 	  	 
 
   	<div class="footer-div">
