--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <div id="cover-page">
-  	<img src="img/INHOUSE.png">
+  	<img src="img/INHOUSE.jpg">
   </div>
 
   <body>
@@ -21,7 +21,12 @@
 	</header>
   	
   	<div class="center-me">
-	  	<img id="intro-page-image" src="img/intro-page.png">
+	  	<!-- <img id="intro-page-image" src="img/intro-page.png"> -->
+	  	<div class="hide-video">
+	  		<video id="intro-page-image" autoplay loop poster="" id="vid">
+	    		<source src="img/nm_drawing_03.mp4" type="video/mp4">
+	    	</video>
+		</div>
 	  	<div id="intro-page-info">
 	  		<h1 class="text-left light title">INHOUSE is a hospitality program & membership club connecting restaurants & regulars.</h1>
 	  		<hr>
