--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
 
   <div id="cover-page">
-  	<img src="img/INHOUSE.jpg">
+  	<img src="img/INHOUSE.png">
   </div>
 
-  <body>
+  <body class="intro-page">
 
   	<header>
   		<div>
@@ -23,8 +23,8 @@
   	<div class="center-me">
 	  	<!-- <img id="intro-page-image" src="img/intro-page.png"> -->
 	  	<div class="hide-video">
-	  		<video id="intro-page-image" autoplay loop poster="" id="vid">
-	    		<source src="img/nm_drawing_03.mp4" type="video/mp4">
+	  		<video id="intro-page-image" autoplay poster="" id="vid">
+	    		<source src="img/nm_drawing_03.ogv" type="video/ogg">
 	    	</video>
 		</div>
 	  	<div id="intro-page-info">
