--- a/membership.html
+++ b/membership.html
@@ -10,10 +10,9 @@
 
   	<header>
   		<div>
-  			<h1>
-  		 <!-- <h1 class="light logo">INHOUSE</h1>  -->
+  			<a href="./index.html"><h1 class="light logo">INHOUSE</h1></a>
   		</div>
-  		<!-- <hr> -->
+  		<hr>
 	</header>
   	
   	<div class="center-me">
