--- a/application.html
+++ b/application.html
@@ -58,7 +58,9 @@
   			<span id="form-2"></span>
   			<span id="form-3"></span>
   		</form>
-		<div id="submit-form-button" class='center-me' style="display:none"><button id="SFB-button" class='red-line'>SUBMIT</button></div>
+		<div id="submit-form-button" class='center-me' style="display:none">
+			<div>Price:&nbsp;<span id="price"></span></div><br>
+			<button id="SFB-button" class='red-line'>SUBMIT</button></div>
   	</div>
 	  	 
 
