--- a/form-1.html
+++ b/form-1.html
@@ -1,12 +1,12 @@
 <hr>
 <h3>ABOUT YOU</h3>
 <div class="form-item">
-	<div name="firstName" class="input-title">First Name*</div>
-	<input>
+	<div class="input-title">First Name*</div>
+	<input name="firstName" >
 </div>
 <div class="form-item">
-	<div name="lastName" class="input-title">Last Name*</div>
-	<input>
+	<div class="input-title">Last Name*</div>
+	<input name="lastName" >
 </div>
 <div class="form-item">
 	<div class="input-title">Date of Birth*</div>
@@ -186,8 +186,8 @@
 <div class="form-item">
 	<input name="mailingAddressCity" placeholder="CITY">
 </div>
-<div name="mailingAddressState" class="form-item">
-	<select class="ad-color">
+<div class="form-item">
+	<select name="mailingAddressState" class="ad-color">
 	<option value="">STATE</option>
 	<option value="AL">Alabama</option>
 	<option value="AK">Alaska</option>
