--- a/form-1.html
+++ b/form-1.html
@@ -530,7 +530,7 @@
 
 <div class="form-item">
 	<div class="input-title">Spouse First Name*</div>
-	<input name=""spouseFirstName>
+	<input name="spouseFirstName">
 </div>
 <div class="form-item">
 	<div class="input-title">Spouse Last Name*</div>
