--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
   	<header>
   		<div>
   			<h1>
-  		 <!-- <h1 class="light logo">INHOUSE</h1>  -->
   		</div>
-  		<!-- <hr> -->
 	</header>
   	
-  	<div class="center-me">
+  	<div class="center-me full-contents">
 	  	<!-- <img id="intro-page-image" src="img/intro-page.png"> -->
 	  	<div class="hide-video">
 	  		<video id="intro-page-image" autoplay poster="" id="vid">
@@ -63,3 +61,9 @@
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="javascript.js"></script>
 </html>
+
+<style type="text/css">
+	::-webkit-scrollbar { 
+	    display: none; 
+	}
+</style>
