--- a/membership.html
+++ b/membership.html
@@ -26,28 +26,29 @@
 	<div id="benefits-div" class="container">
 		<hr>
 		<div class="row">
-			<p class="row-item"><strong class="red">RESTAURANTS</strong><br>
+			<p class="row-item hover-show" id="hover-show-1"><strong class="red">RESTAURANTS</strong><br>
 				We bring together dining enthusiasts<br>
 				Us quia dolorat. Untiberibea pa dolecatur?</p>
-			<p class='row-item'><strong>BENEFIT 1</strong><br>
+			<p class='row-item hover-show' id="hover-show-2"><strong>BENEFIT 1</strong><br>
 				We bring together dining enthusiasts<br>
 				Us quia dolorat. Untiberibea pa dolecatur?</p>
-			<p class='row-item'><strong>BENEFIT 2</strong><br>
+			<p class='row-item hover-show' id="hover-show-3"><strong>BENEFIT 2</strong><br>
 				We bring together dining enthusiasts<br>
 				Us quia dolorat. Untiberibea pa dolecatur?</p>
-			<p class='row-item'><strong>BENEFIT 3</strong><br>
+			<p class='row-item hover-show' id="hover-show-4"><strong>BENEFIT 3</strong><br>
 				We bring together dining enthusiasts<br>
 				Us quia dolorat. Untiberibea pa dolecatur?</p>
-			<p class='row-item'><strong>BENEFIT 4</strong><br>
+			<p class='row-item hover-show' id="hover-show-5"><strong>BENEFIT 4</strong><br>
 				We bring together dining enthusiasts<br>
 				Us quia dolorat. Untiberibea pa dolecatur?</p>
 		</div>
 	</div>
 
 	<div id="partners-div">
-		<div id="partners-header"><strong>RESTAURANT PARTNERS 2016/2017</strong></div>
+		<div class="hover-show-div" id="hover-show-1-div">
+			<div id="partners-header"><strong>RESTAURANT PARTNERS 2016/2017</strong></div>
 
-		<hr>
+			<hr>
 			<div class="row">
 				<ul class="partner-item">
 					<li><strong>A</strong></li>
@@ -88,7 +89,7 @@
 					<li>Gramercy Tavern</li>
 				</ul>				
 			</div>
-		<hr>
+			<hr>
 			<div class="row">
 				<ul class="partner-item">
 					<li><strong>H</strong></li>
@@ -122,7 +123,7 @@
 					<li>O Ya</li>
 				</ul>				
 			</div>
-		<hr>
+			<hr>
 			<div class="row-left">
 				<ul class="partner-item">
 					<li><strong>P</strong></li>
@@ -141,6 +142,24 @@
 					<li>Upland</li>
 				</ul>			
 			</div>
+		</div> <!-- end of hover-show-1-div -->
+
+		<div class="hover-show-div" id="hover-show-2-div">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ultrices velit nec felis mollis, at maximus nisi vulputate. Aenean vel arcu vehicula metus congue euismod. Nunc consectetur erat sed nisl sodales, in tristique quam pulvinar. Ut eget lacinia lectus. Sed eget lacus augue. Quisque commodo erat ex, in consequat mauris finibus sit amet. Cras sapien orci, hendrerit sed tempus eget, fermentum id tellus. Vivamus rhoncus varius tempor. Phasellus sit amet velit vel nibh maximus tincidunt. Sed bibendum urna in est pharetra pulvinar. Sed urna dolor, tempor interdum hendrerit vitae, molestie vestibulum quam. Pellentesque dolor lorem, laoreet sit amet tempor et, molestie ut justo. Duis viverra leo auctor elit molestie cursus. Vivamus quis eleifend mauris. Etiam turpis odio, vulputate vel convallis eu, gravida eu mauris. Praesent volutpat augue vitae mattis ultrices.</p>
+		</div> <!-- end of hover-show-2-div -->
+
+		<div class="hover-show-div" id="hover-show-3-div">
+			<p>Fusce eget felis sed erat scelerisque commodo. Phasellus et convallis ex. In hac habitasse platea dictumst. Morbi accumsan sed dui ut fermentum. Nunc efficitur, lorem non mollis elementum, diam tortor vestibulum ante, non aliquet nisi orci ut nibh. Vestibulum orci massa, pretium vel eros imperdiet, porta pretium orci. Sed vitae accumsan lectus. Donec massa urna, euismod et est sed, venenatis aliquet dui. Vivamus mattis ligula mi. Curabitur dignissim commodo ligula et blandit. Nam imperdiet nisl in arcu fringilla, nec maximus mauris egestas. Nullam ac est erat. Phasellus id mattis ligula. Curabitur pellentesque tellus leo, sed fringilla erat dictum in. Quisque iaculis, mauris ac pellentesque fringilla, felis lectus vestibulum felis, at feugiat purus ipsum pellentesque justo.</p>
+		</div> <!-- end of hover-show-3-div -->
+
+		<div class="hover-show-div" id="hover-show-4-div">
+			<p>Mauris enim felis, tempus sed euismod ac, laoreet id nibh. Etiam laoreet mollis pharetra. Donec sed varius ligula, sit amet vulputate lorem. Quisque varius diam et auctor tristique. In hac habitasse platea dictumst. Maecenas auctor consequat nulla, ut tincidunt justo. Curabitur ornare tristique mi, ac sodales felis consequat at. Aliquam dictum tristique eros, eget feugiat purus fringilla sit amet. Cras ultrices ipsum egestas dolor convallis feugiat. Fusce imperdiet purus sed tincidunt venenatis. Cras vestibulum enim et aliquet condimentum.</p>
+		</div> <!-- end of hover-show-4-div -->
+
+		<div class="hover-show-div" id="hover-show-5-div">
+			<p>Quisque condimentum facilisis accumsan. Aliquam consectetur, neque eu interdum faucibus, justo est varius risus, nec vehicula ante diam et ligula. Mauris consequat, metus ullamcorper elementum tincidunt, lectus tellus vulputate mauris, eget luctus nibh lacus ac ligula. Suspendisse vehicula sapien eget libero viverra, ut sagittis est sagittis. Mauris sit amet fermentum tellus. Proin vehicula at dolor tincidunt tempor. Mauris placerat ut purus sit amet aliquet. Etiam placerat, nibh nec vehicula lobortis, elit purus egestas nibh, non rutrum nunc felis scelerisque ligula. Integer sed accumsan tortor, sed feugiat nulla. Donec convallis vulputate vestibulum. Quisque porttitor, massa vitae posuere gravida, orci ligula ornare dolor, a laoreet arcu risus dignissim nisl. Aenean leo tortor, vehicula ut lacus eget, pellentesque elementum dolor. Nulla iaculis metus nec sapien tincidunt, at porta elit sodales. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+		</div> <!-- end of hover-show-5-div -->
+
 	</div>
 
 	<div id="apply-button-div"><a href="./application.html" class="red-line">APPLY</a></div>
