cleaned up code

--- a/application.html
+++ b/application.html
@@ -20,10 +20,10 @@
 	  		<h1 class="text-left">Thank you for your interest!</h1>
 
 			<div id="intro-text-columns">
-			  			<div class="column">  			
+			  			<div class="column par">  			
 			  				<p>There are two stages to the application process. First, the form below; we do ask for a restaurant and/or member proposer. Upon approval, we will arrange for a 15 minute phone call to discuss full membership features.</p>
 			  			</div>
-			  			<div class="column">  			
+			  			<div class="column par">  			
 			  				<p>Please note that we are by nature a limited membership club, but we do keep an active waitlist.</p>
 			  			</div>
 		  	
